CSS/styles.css
body{
    font-family: 'Inter', sans-serif !important;
    background-image: linear-gradient(#9FC532, #CFCBCB, #A8BC6A, #57934D);
}
body.contatos{
        min-height: 100vh;
        margin: 0;
        background-repeat: no-repeat;
        background-attachment: fixed;
        overflow-x: hidden;
}
html{
    scroll-behavior: smooth;
}
.inicio{
    background-image: url(../images/bridge.png);
    background-color: #000000;
    background-repeat: no-repeat;
    background-size: cover;
    /* overflow-x: hidden; */
    min-height: 100vh;
    color: #FFFFFF;
}
/*  */
.parte-esq{
    /* height: 100%; */
    padding-left: 10px;
}
.cont-index{
    height: 100%;
    font-size: 100%;
    /* position: relative; */
}

.rodape-principal {
    display: flex;
    align-items: center;
    padding: 10;
    position: absolute; 
    bottom: 0;
    margin-top: auto; 
    /* left: 0; */
    /* width: 100%; */
  }
  
.mapa {
    display: flex;
    align-items: center;
  }

  .instagram, .facebook {
    margin-right: 10px;
    left: 0;
  }
  
.mapa-icone{
    margin-right: 10px;
    right: 0;
}        
  
#espaco{
    color: #000000;
}
.topo{
    justify-content: space-between;
    display: flex;
    align-items: center;
}
/* Header */
.cabecalho{
    /* text-align: right; */
    display: block;
}
nav ul{
    display: flex;
    gap: 1.5rem;
    list-style-type: none;
}
nav a{
    text-decoration: none;
    color: white;
}
nav a::after {
    display: block;
    content: "";
    border-bottom: solid 2px #004922;
    transform: scaleX(0);
    transition: transform 0.4s;
}

nav a:hover::after {
    transform: scaleX(1);
}
nav.show{
    transform: translateX(0);
}
.logo-amb{
    text-decoration: none;
    color: black;
    margin-bottom: 16px;
}
.menu-overlay.show {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 100%;
    backdrop-filter: blur(2px);
    background-color: rgb(0 0 0 / 50%);
    width: 100%;
    z-index: 0;
}

.menu-layout,
.fechar-menu{
    display: none;
    cursor: pointer;
}
/* .links{
    text-decoration: none;
    color: #FFFFFF;
    font-family: 'Inter', sans-serif;
    padding: 14px;
    transition: 0.2s;
}
.links:hover{
    color: #AAA;
    content: "";
    border-bottom: solid 2px #004922;
    transform: scaleX(0);
    transition: transform 0.4s;
}
.links:hover::after{
    transform: scaleX(1);
} */

img.imagem-teste{
    margin-bottom: -8px;
}
a.links.ultimo{
    margin-right: -10px;
}

.texto-inicial{
    margin-bottom: -10px;
    margin-top: 15px;
    font-size: medium;
}
@media (min-width:70.1rem){
    header{
        width: 100%;
        background-color: white;
        padding-top: 20px;
    }
    nav{
        margin-right: 20px;
    }
    nav a{
        color: black;
    }
}
@media (max-width: 70rem){
    .menu-layout,
    .fechar-menu {
        display: inline-block;
        font-size: 1.2rem;
        background-color: beige;
        border: none;
    }

    nav {
        padding: 1.5rem 2.5rem 1.5rem 1.5rem;
        text-align: right;
        position: fixed;
        top: 0;
        right: 0;
        height: 100%;
        background-color: white;
        z-index: 1;
        color: white;
        width: 40%;
        transform: translateX(100%);
        transition: transform 0.5s;
    }
    nav ul {
        flex-direction: column;
        gap: 1.5rem;
        align-items: flex-end;
        margin-top: 2rem;
    }
    nav a {
        font-size: 1.2rem;
        color: black;
    }
}

/* Main .parte-esq alignment to match Figma's layout */
p.essa.texto-inicial{
    margin-top: 50px;
}
.missao{
    font-size: 40px;
}

.essa{
    text-decoration:underline;
}

.cont-index{
    width: 50%;
    text-align: left;
    font-size-adjust: 10px;
}


.titulo{
    text-align: center;
    font-weight: 1000;
    font-size: 56px;
}

.cont-espaco{
    text-align: center;
    font-size: 20px;
}

.arvore{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

.sub{
    padding-left: 20px;
    text-decoration: underline;
    font-weight:bold ;
    font-size: 20px;
}

.sub-esp{
    font-weight: bolder;
    font-size: 56px;
    padding-left: 20px;
}

.cont-esp{
    padding-left: 20px;
    font-size: 20px;
    display: block;
    padding-right: 20%;
}

.amoralface{
    display: block;
    position: relative;
    bottom: 120px;
    margin-left: auto;
    margin-right: 30px;
    width: 30%;
}

.proj{
    display: inline-block;
    padding: 20px;
    text-decoration: none;
    color: #000000;
}

.membro{
    text-align: center;
    background-color: white;
    border-radius: 35px;
}

.pos1{
    display: block;
    margin-left: 40px;
    margin-right: 1200px;
    width: 30%;
}

.pos2{
    display: block;
    margin-left: auto;
    margin-right: 300px;
    width: 30%;
}

.pos3{
    display: block;
    margin-left: auto;
    margin-right: 700px;
    width: 30%;
}

.voluntariar{
    text-align: center;
    font-weight: bold;
    font-size: xx-large;
}

.voluntario-btn{
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: auto;
    width: 30%;
    background-color: #FFFFFF;
    border-radius: 20%;
}

.volta{
    position: fixed;
    right: 1%;
    bottom: 0.5%;
    padding: 2px;
    width: 50px;
    text-decoration: none;
    font-size: large;
    color: #555;
    transition: 0.5s;
    border: 2px solid #004922;
    background-color: rgba(107, 255, 1, 0.636);
    border-radius: 8px;
}

.volta:hover{
    color: #000000;
    background-color: rgba(72, 165, 6, 0.636);;
}

.cima{
    background-image: url(../images/box.png);
    background-repeat: repeat-x;
    background-size: auto;
    background-color: #004922;
    height: 100%;
    color: #FFFFFF;
}

.agendamento{
    display: flex;
    margin: 0 auto;
    flex-wrap: wrap;
    width: 15%;
}

#agendar{
    background-image: url(../images/box.png);
    color: white;
}

.agendar2{
    background-color: #004922;
    color: white;
}

.logo{
    /* display: block; */
    margin-left: 20%;
    margin-right: auto;
    /* width: 20%; */
}

.enderecos{
    /* position: fixed; */
    margin-left: 20%;
}

#vis-cont1{
    display: inline-block;
    width: 29.5%;
}

#vis-cont2{
    display: inline-block;
    /* position: relative;
    bottom: 150px; */
}

.termos{
    display: inline-block;
    font-size: 20px;
    padding-left: 50px;
    padding-right: 10px;
}

.creditos{
    display: inline-block;
    font-size: 20px;
}

.free-link{
    color: #FFFFFF;
}

.link-tit{
    /* position: relative;
    left: 30%;
    bottom: 23%; */
    font-weight:1000;
    font-size: large;
}

.link{
    text-decoration: underline;
    color: #FFFFFF;
    /* position: fixed;
    left: 30%; */
}

.contatos{
    color: #000000;
}

.rede-cont{
    color: #000000;
}

.link-cont{
    color: #000000;
}

.link-tit-cont{
    font-weight: 1000;
    font-size: large;
}

/* .text-map{
    position: relative;
    left: 10%;
    font-weight: 1000;
}

.mapa{
    position: relative;
    left: 50%;
} */

.cont{
    position: relative;
    left: 6%;
}

.projeto{
    color: #000000;
    background-color: #c1ff6a82;
}

.projetos {
    width: 31%;
    margin: 1% 1%;
    display: inline-block;
    padding: 15px;
  }

.product-image {
    height: 300px;
    width: 100%;
    margin-bottom: 10px;
    background-position: center;
    background-size: cover;
  }

 #img-1{
    background-image: url('../images/horta.png');
}
#img-2{
    background-image: url('../images/compostagem.png');
}
#img-3{
    background-image: url('../images/abelhas.png');
}
#img-4{
    background-image: url('../images/captacao.png');
}
#img-5{
    background-image: url('../images/imagem5.jfif');
}
#img-6{
    background-image: url('../images/arvores.png');
}
#img-7{
    background-image: url('../images/oficina.png');
}
#img-8{
    background-image: url('../images/imagem8.jfif');
}
#img-9{
    background-image: url('../images/jardim.png');
}

.projbtn{

    padding: 2px;
    width: 50px;
    text-decoration: none;
    font-size: large;
    color: #555;
    transition: 0.5s;
    border: 2px solid #004922;
    background-color: rgba(107, 255, 1, 0.636);
    border-radius: 8px;
}
    
.projbtn:hover{
    color: #000000;
    background-color: rgba(72, 165, 6, 0.636);;
}

.texto1{
    font-weight: 1000;
    font-size: x-large;
}

.agro{
    background-image: url('../images/horta.png');
    background-repeat: repeat-x;
    background-size:auto;
    background-color:#A8BC6A;
    border-radius: 10px;
}

.conteudo{
    /* display: block; */
    text-align: justify;
    margin: 10px;
    font-size: 110%;

}

.comp{
    background-image: url('../images/compostagem.png');
    background-repeat: repeat-x;
    background-size:auto;
    background-color:#A8BC6A;
    border-radius: 10px;
}

.abel{
    background-image: url('../images/abelhas.png');
    background-repeat: repeat-x;
    background-size:auto;
    background-color:#A8BC6A;
    border-radius: 10px;
}

.capt{
    background-image: url('../images/captacao.png');
    background-repeat: repeat-x;
    background-size:auto;
    background-color:#A8BC6A;
    border-radius: 10px;
}

.reci{
    background-image: url('../images/imagem5.jfif');
    background-repeat: repeat-x;
    background-size:auto;
    background-color:#A8BC6A;
    border-radius: 10px;
}

.nati{
    background-image: url('../images/arvores.png');
    background-repeat: repeat-x;
    background-size:auto;
    background-color:#A8BC6A;
    border-radius: 10px;
}

.ofic{
    background-image: url('../images/oficina.png');
    background-repeat: repeat-x;
    background-size:auto;
    background-color:#A8BC6A;
    border-radius: 10px;
}

.volu{
    background-image: url('../images/imagem8.jfif');
    background-repeat: repeat-x;
    background-size:auto;
    background-color:#A8BC6A;
    border-radius: 10px;
}

.inte{
    background-image: url('../images/jardim.png');
    background-repeat: repeat-x;
    background-size:auto;
    background-color:#A8BC6A;
    border-radius: 10px;
}

#copy{
    margin-left: 50px;
    color: gray;
}

.carrossel-container {
    width: 100%;
    height: 600px;
    overflow: hidden;
    position: relative;
  }
  
.carrossel-item {
    width: 100%;
    height: 100%;
    display: none;
}
  
.carrossel-item .vertical {
    width: 30%;
    height: 100%;
    object-fit: cover;
    position: relative;
    bottom: 30%;
    left: 60%;
}

.carrossel-btn{
    position: relative;
    left: 65%;
}

.carrossel-item .horizontal{
    width: 40%;
    height: 200px;
    object-fit: contain;
    position: absolute;
    left: 500px;
    top: 300px;
}

